--- a/styleUP/Base.lproj/Main.storyboard
+++ b/styleUP/Base.lproj/Main.storyboard
@@ -43,6 +43,7 @@
                                                 <state key="normal" title="   RANDOMIZE   "/>
                                                 <connections>
                                                     <action selector="randomize:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YsZ-x9-LZe"/>
+                                                    <segue destination="2Os-Gv-nGL" kind="show" id="yIq-7X-oHr"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -123,7 +124,7 @@
                                     <outlet property="delegate" destination="AX8-PB-dCR" id="Oy7-wS-NH9"/>
                                 </connections>
                             </pickerView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="86e-WU-00s">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="86e-WU-00s">
                                 <rect key="frame" x="34" y="565" width="294" height="61"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -197,6 +198,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="addToWard" destination="86e-WU-00s" id="Ci2-AD-I7d"/>
                         <outlet property="dropDown1" destination="Jla-Sy-17E" id="hKx-My-2qw"/>
                         <outlet property="dropDown2" destination="BUV-B2-d50" id="tbl-TD-Sak"/>
                         <outlet property="textBox1" destination="QOn-3k-sye" id="nc4-vf-AGH"/>
@@ -205,7 +207,52 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L5F-Ok-Hz4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="297" y="590"/>
+            <point key="canvasLocation" x="295" y="-154"/>
+        </scene>
+        <!--My Wardrobe-->
+        <scene sceneID="QMF-bZ-nQQ">
+            <objects>
+                <viewController title="My Wardrobe" id="2Os-Gv-nGL" customClass="ViewController" customModule="styleUP" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6jZ-CH-P8z"/>
+                        <viewControllerLayoutGuide type="bottom" id="3hs-34-1mc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pB9-4o-HIW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5TZ-Lw-OCZ">
+                                <rect key="frame" x="0.0" y="132" width="375" height="493"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="prototypeCell" id="OtQ-eT-dJW">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OtQ-eT-dJW" id="7mF-4e-Zxs">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="2Os-Gv-nGL" id="2eC-3b-eDp"/>
+                                    <outlet property="delegate" destination="2Os-Gv-nGL" id="x9K-ZA-qtM"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="My Wardrobe" id="B9S-hk-Lk6">
+                        <barButtonItem key="backBarButtonItem" title="Home" id="mPQ-GV-UoZ"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yw2-8g-7jM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="301.60000000000002" y="598.65067466266873"/>
         </scene>
         <!--Action Successful-->
         <scene sceneID="Lys-ha-Dgy">
@@ -261,7 +308,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="isK-Kk-Qt1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1166" y="-154"/>
+            <point key="canvasLocation" x="1124" y="-154"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="OS5-d6-wjg">
@@ -287,7 +334,7 @@
         <image name="top" width="120" height="170"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Rfo-ju-rrj"/>
+        <segue reference="KPf-Wn-FeZ"/>
         <segue reference="6cu-En-Mpq"/>
     </inferredMetricsTieBreakers>
 </document>
