--- a/styleUP/Base.lproj/Main.storyboard
+++ b/styleUP/Base.lproj/Main.storyboard
@@ -38,12 +38,12 @@
                                                 <rect key="frame" x="82.5" y="175" width="120" height="170"/>
                                             </imageView>
                                             <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nSf-rc-Hgg" userLabel="Randomize Button">
-                                                <rect key="frame" x="76.5" y="350" width="132" height="34"/>
+                                                <rect key="frame" x="63.5" y="350" width="158" height="34"/>
                                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <state key="normal" title="   RANDOMIZE   "/>
+                                                <state key="normal" title="   MY WARDROBE   "/>
                                                 <connections>
                                                     <action selector="randomize:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YsZ-x9-LZe"/>
-                                                    <segue destination="2Os-Gv-nGL" kind="show" id="yIq-7X-oHr"/>
+                                                    <segue destination="2Os-Gv-nGL" kind="show" id="J3J-Ay-KmA"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -71,7 +71,7 @@
                                                 </state>
                                                 <connections>
                                                     <action selector="addTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vui-S1-nA6"/>
-                                                    <segue destination="AX8-PB-dCR" kind="show" id="bju-X6-xho"/>
+                                                    <segue destination="til-Y0-eXx" kind="presentation" id="bju-X6-xho"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ze-xW-8eu" userLabel="Pants Button">
@@ -97,7 +97,6 @@
                     <connections>
                         <outlet property="lowerBodyImageView" destination="fsv-gS-7hB" id="5ly-13-CNE"/>
                         <outlet property="upperBodyImageView" destination="wqv-v7-sYd" id="A9q-g6-Tlp"/>
-                        <segue destination="AX8-PB-dCR" kind="show" id="6cu-En-Mpq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -197,6 +196,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Edit Wardrobe" id="VMu-jm-SjG">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="33S-3m-eXH">
+                            <connections>
+                                <action selector="cancel:" destination="AX8-PB-dCR" id="sjz-c7-Twq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="addToWard" destination="86e-WU-00s" id="Ci2-AD-I7d"/>
                         <outlet property="dropDown1" destination="Jla-Sy-17E" id="hKx-My-2qw"/>
@@ -207,7 +214,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L5F-Ok-Hz4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="295" y="-154"/>
+            <point key="canvasLocation" x="1180" y="-154"/>
         </scene>
         <!--My Wardrobe-->
         <scene sceneID="QMF-bZ-nQQ">
@@ -252,12 +259,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yw2-8g-7jM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="301.60000000000002" y="598.65067466266873"/>
+            <point key="canvasLocation" x="-551" y="725"/>
         </scene>
         <!--Action Successful-->
         <scene sceneID="Lys-ha-Dgy">
             <objects>
-                <viewController title="Action Successful" id="MwR-m2-hPO" sceneMemberID="viewController">
+                <viewController title="Action Successful" id="MwR-m2-hPO" customClass="ViewController" customModule="styleUP" customModuleProvider="target" sceneMemberID="viewController">
                     <visualEffectView key="view" opaque="NO" contentMode="scaleToFill" id="zjZ-if-Fkn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -268,7 +275,7 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XOA-Gt-75P">
                                     <rect key="frame" x="8" y="8" width="359" height="651"/>
                                     <connections>
-                                        <segue destination="BYZ-38-t0r" kind="presentation" id="Rfo-ju-rrj"/>
+                                        <action selector="addActionSucc:" destination="MwR-m2-hPO" eventType="touchUpInside" id="FCf-nw-uqH"/>
                                     </connections>
                                 </button>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="LPv-Pg-Wy4">
@@ -305,10 +312,11 @@
                         </view>
                         <blurEffect style="light"/>
                     </visualEffectView>
+                    <navigationItem key="navigationItem" id="Cra-uN-qto"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="isK-Kk-Qt1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1124" y="-154"/>
+            <point key="canvasLocation" x="1180" y="556"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="OS5-d6-wjg">
@@ -326,6 +334,24 @@
             </objects>
             <point key="canvasLocation" x="-1602" y="-154"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CNe-hC-pvc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="til-Y0-eXx" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dIm-4V-Y07">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="AX8-PB-dCR" kind="relationship" relationship="rootViewController" id="HvA-lC-jR4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TtZ-NA-EMN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="272.80000000000001" y="-154.27286356821591"/>
+        </scene>
     </scenes>
     <resources>
         <image name="bottom" width="120" height="170"/>
@@ -333,8 +359,4 @@
         <image name="tick" width="100" height="100"/>
         <image name="top" width="120" height="170"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="KPf-Wn-FeZ"/>
-        <segue reference="6cu-En-Mpq"/>
-    </inferredMetricsTieBreakers>
 </document>
